[package]
name = "hourglass"
version = "0.1.0"
edition = "2018"
authors = ["Marcel Blanck"]
license = "MIT or Apache-2.0"
readme = "README.md"
repository = "https://github.com/MarcelBlanck/rusty-raspberry-hourglass"
description = """
Raspberry Pi Zero W based hourglass application with
display, audio output and webserver based control.
"""
keywords = ["raspberry", "webserver", "spi", "i2s", "dotmatrix"]
categories = ["maker", "raspberry"]
include = ["src/", "LICENSE-*", "README.md"]

[target.'cfg(target_arch = "arm")'.dependencies.rppal]
version = "0.13"

[target.'cfg(not(target_arch = "arm"))'.dependencies.minifb]
version = "0.19.3"

[dependencies]
mockall = "0.10.2"
actix-web = "3"
actix-files = "0.5"
crossbeam-channel = "0.5.1"
futures = "0.3.17"
cpal = "0.13.4"
