[package]
name = "hourglass"
version = "0.1.0"
edition = "2018"
authors = ["Marcel Blanck"]
license = "MIT or Apache-2.0"
readme = "README.md"
repository = "https://github.com/MarcelBlanck/rusty-raspberry-hourglass"
description = """
Raspberry Pi Zero W based hourglass application with
display, audio output and webserver based control.
"""
keywords = ["raspberry", "webserver", "spi", "i2s", "dotmatrix"]
categories = ["maker", "raspberry"]
include = ["src/", "LICENSE-*", "README.md"]

[target.'cfg(target_arch = "arm")'.dependencies.rppal]
version = "0.14.1"

[target.'cfg(not(target_arch = "arm"))'.dependencies.minifb]
version = "0.24.0"

[dependencies]
mockall = "0.11.4"
actix-web = "4.3.1"
actix-files = "0.6.2"
cpal = "0.15.2"
